--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     ]
   },
   "scripts": {
-    "install": "rm -rf node_modules/serialport/build/* && node_modules/.bin/electron-rebuild -w serialport -f && rm -rf node_modules/node-hid/build/* && node_modules/.bin/electron-rebuild -w node-hid -f",
+    "install": "electron-rebuild -w serialport -f && electron-rebuild -w node-hid -f && electron-rebuild -w node-sass -f",
     "preship": "yarn build && yarn build-css",
     "ship": "build --em.main=build/electron.js --win --ia32 -p always -c electron-builder.yml",
     "build-css": "node-sass-chokidar src/ -o src/",
@@ -52,6 +52,7 @@
     "pretty": "prettier --write \"{{public,src}/**/*.{css,scss,js,json},package.json}\"",
     "precommit": "lint-staged",
     "electron-dev": "concurrently \"yarn watch-css\" \"export BROWSER=none && yarn start\" \"wait-on http://localhost:3000 && electron .\"",
+    "electron-dev-win": "concurrently \"yarn watch-css\" \"set BROWSER=none&&yarn start\" \"wait-on http://localhost:3000 && electron .\"",
     "electron-pack": "build --em.main=build/electron.js --win --ia32 -c electron-builder.yml",
     "preelectron-pack": "yarn build && yarn build-css"
   },
