--- a/package.json
+++ b/package.json
@@ -24,13 +24,14 @@
     "electron-updater": "^2.10.1",
     "express": "^4.16.3",
     "material-ui": "^0.20.2",
+    "node-fetch": "^2.2.0",
     "node-hid": "^0.7.3",
     "node-sass-chokidar": "0.0.3",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-scripts": "1.0.10",
     "serialport": "^7.0.2",
-    "usb-detection": "^3.2.0",
+    "usb": "^1.3.3",
     "websocket": "^1.0.26"
   },
   "lint-staged": {
@@ -40,7 +41,7 @@
     ]
   },
   "scripts": {
-    "install": "electron-rebuild -w serialport -f && electron-rebuild -w node-hid -f && electron-rebuild -w node-sass -f",
+    "install": "electron-rebuild -w serialport -f && electron-rebuild -w node-hid -f && electron-rebuild -w node-sass -f && electron-rebuild -w usb -f",
     "preship": "yarn build && yarn build-css",
     "ship": "build --em.main=build/electron.js --win --ia32 -p always -c electron-builder.yml",
     "build-css": "node-sass-chokidar src/ -o src/",
