--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "electron-updater": "^2.10.1",
     "express": "^4.16.3",
     "material-ui": "^0.20.2",
+    "material-ui-bottom-sheet": "^0.5.1",
     "material-ui-slider": "^0.1.0",
     "node-fetch": "^2.2.0",
     "node-hid": "^0.7.3",
     "node-sass-chokidar": "0.0.3",
     "react": "^15.6.1",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^15.6.1",
     "react-scripts": "1.0.10",
     "serialport": "^7.0.2",
