--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "^15.6.1",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^15.6.1",
+    "react-markdown": "^3.6.0",
     "react-scripts": "1.0.10",
     "serialport": "^7.0.2",
     "usb": "^1.3.3",
