--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,20 +3,17 @@
   "name": "pegasus",
   "icons": [
     {
-        "src": "/android-chrome-192x192.png",
-        "sizes": "192x192",
-        "type": "image/png"
+      "src": "/android-chrome-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
     },
     {
-        "src": "/android-chrome-512x512.png",
-        "sizes": "512x512",
-        "type": "image/png"
+      "src": "/android-chrome-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
     }
   ],
   "theme_color": "#ffffff",
   "background_color": "#ffffff",
-  "permissions": [
-    "http://localhost:9001",
-    "https://www.heliorc.com"
-  ]
+  "permissions": ["http://localhost:9001", "https://www.heliorc.com"]
 }
