--- a/package.json
+++ b/package.json
@@ -58,6 +58,8 @@
     "electron-dev": "concurrently \"yarn watch-css\" \"export BROWSER=none && yarn start\" \"wait-on http://localhost:3000 && electron .\"",
     "electron-dev-win": "concurrently \"yarn watch-css\" \"set BROWSER=none&&yarn start\" \"wait-on http://localhost:3000 && electron .\"",
     "electron-pack": "build --mac -c electron-builder.yml",
+    "electron-pack-win": "build --win -c electron-builder.yml",
+    "electron-pack-lin": "build -l -c electron-builder.yml",
     "preelectron-pack": "yarn build && yarn build-css"
   },
   "devDependencies": {
@@ -71,5 +73,13 @@
     "lint-staged": "^7.3.0",
     "prettier": "^1.14.3",
     "wait-on": "^3.0.1"
+  },
+  "darwinDependencies": {
+    "usb": "github:tessel/node-usb#2961e948d93bec0cdd1908c03e3f1f98dfd3fd44",
+    "node-hid": "^0.7.3"
+  },
+  "win32Dependencies": {
+    "usb": "github:tessel/node-usb#2961e948d93bec0cdd1908c03e3f1f98dfd3fd44",
+    "node-hid": "^0.7.3"
   }
 }
