--- a/package.json
+++ b/package.json
@@ -58,8 +58,8 @@
     "electron-dev": "concurrently \"yarn watch-css\" \"export BROWSER=none && yarn start\" \"wait-on http://localhost:3000 && electron .\"",
     "electron-dev-win": "concurrently \"yarn watch-css\" \"set BROWSER=none&&yarn start\" \"wait-on http://localhost:3000 && electron .\"",
     "electron-pack": "build --mac -c electron-builder.yml",
-    "electron-pack-win": "build --win -c electron-builder.yml",
-    "electron-pack-lin": "build -l -c electron-builder.yml",
+    "electron-pack-win": "yarn build && build --win -c electron-builder.yml",
+    "electron-pack-lin": "yarn build && build -l -c electron-builder.yml",
     "preelectron-pack": "yarn build && yarn build-css"
   },
   "devDependencies": {
