--- a/package.json
+++ b/package.json
@@ -20,16 +20,16 @@
     }
   },
   "dependencies": {
-    "@material-ui/core": "^3.0.3",
+    "@material-ui/core": "^3.1.1",
+    "@material-ui/icons": "^3.0.1",
+    "@material-ui/lab": "^3.0.0-alpha.17",
     "electron-context-menu": "^0.10.0",
     "electron-updater": "^3.1.2",
     "express": "^4.16.3",
     "material-ui": "^0.20.2",
-    "material-ui-bottom-sheet": "^0.5.1",
     "material-ui-slider": "^0.1.0",
     "node-hid": "^0.7.3",
     "react": "^16.5.2",
-    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.5.2",
     "react-markdown": "^3.6.0",
     "react-scripts": "1.1.5",
