updating dfu mode to replace progress instead of append, adding better error handling

--- a/public/server/config/ui_config_rf1.json
+++ b/public/server/config/ui_config_rf1.json
@@ -314,112 +314,7 @@
       "bind",
       "short_throw"
     ],
-    "ADVANCED": [
-      "thr_corr_value",
-      "thr_corr_angle",
-      "bat_capacity",
-      "vbat_max_cell_voltage",
-      "vbat_full_cell_voltage",
-      "vbat_min_cell_voltage",
-      "vbat_warning_cell_voltage",
-      "vbat_hysteresis",
-      "current_meter",
-      "battery_meter",
-      "vbat_detect_cell_voltage",
-      "use_vbat_alerts",
-      "use_cbat_alerts",
-      "cbat_alert_percent",
-      "vbat_cutoff_percent",
-      "vbat_scale",
-      "ibata_scale",
-      "ibata_offset",
-      "ibatv_scale",
-      "ibatv_offset",
-      "beeper_inversion",
-      "beeper_od",
-      "beeper_frequency",
-      "beeper_dshot_beacon_tone",
-      "reboot_character",
-      "imu_dcm_kp",
-      "imu_dcm_ki",
-      "small_angle",
-      "auto_disarm_delay",
-      "gyro_cal_on_first_arm",
-      "use_stick_arming",
-      "gps_provider",
-      "gps_sbas_mode",
-      "gps_auto_config",
-      "gps_auto_baud",
-      "gps_wp_radius",
-      "nav_controls_heading",
-      "nav_speed_min",
-      "nav_speed_max",
-      "nav_slew_rate",
-      "runaway_takeoff_prevention",
-      "runaway_takeoff_deactivate_delay",
-      "runaway_takeoff_deactivate_throttle_percent",
-      "vbat_pid_gain",
-      "pid_at_min_throttle",
-      "anti_gravity_threshold",
-      "anti_gravity_gain",
-      "setpoint_relax_ratio",
-      "dterm_setpoint_weight",
-      "acc_limit_yaw",
-      "acc_limit",
-      "crash_dthreshold",
-      "crash_gthreshold",
-      "crash_setpoint_threshold",
-      "crash_time",
-      "crash_delay",
-      "crash_recovery_angle",
-      "crash_recovery_rate",
-      "crash_limit_yaw",
-      "crash_recovery",
-      "iterm_windup",
-      "iterm_limit",
-      "pidsum_limit",
-      "yaw_lowpass",
-      "level_limit",
-      "horizon_tilt_effect",
-      "horizon_tilt_expert_mode",
-      "gps_pos_p",
-      "gps_pos_i",
-      "gps_pos_d",
-      "gps_posr_p",
-      "gps_posr_i",
-      "gps_posr_d",
-      "gps_nav_p",
-      "gps_nav_i",
-      "gps_nav_d",
-      "ledstrip_visual_beeper",
-      "task_statistics",
-      "debug_mode",
-      "rate_6pos_switch",
-      "cpu_overclock",
-      "pwr_on_arm_grace",
-      "max7456_clock",
-      "displayport_msp_col_adjust",
-      "displayport_msp_row_adjust",
-      "displayport_max7456_col_adjust",
-      "displayport_max7456_row_adjust",
-      "displayport_max7456_inv",
-      "displayport_max7456_blk",
-      "displayport_max7456_wht",
-      "esc_sensor_halfduplex",
-      "led_inversion",
-      "dashboard_i2c_bus",
-      "dashboard_i2c_addr",
-      "camera_control_mode",
-      "camera_control_ref_voltage",
-      "camera_control_key_delay",
-      "camera_control_internal_resistance",
-      "pinio_config",
-      "pinio_box",
-      "usb_hid_cdc",
-      "p_level",
-      "i_level",
-      "d_level"
-    ]
+    "ADVANCED": ["advanced"]
   },
   "elements": {
     "p_roll": {
@@ -581,5 +476,9 @@
       ]
     }
   },
-  "rules": {}
+  "keymap": {
+    "gyro_lpf": "gyro_hardware_lpf",
+    "dterm_lowpass_type": "dterm_lowpass_hz_type",
+    "dterm_lowpass": "dterm_lowpass_hz"
+  }
 }
