changing bundling to place dfu-utils outside of the archive and fixing pacth to dfu-util when packaged

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "nodeGypRebuild": false,
   "npmRebuild": false,
   "build": {
+    "extraResources": "public/server/utils/dfu/**/*",
     "appId": "com.pegasus",
     "files": [
       "build/**/*",
