--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     }
   },
   "dependencies": {
+    "@connectedyard/node-intelhex": "^1.2.4",
     "@material-ui/core": "^3.1.1",
     "@material-ui/icons": "^3.0.1",
     "@material-ui/lab": "^3.0.0-alpha.17",
     "electron-context-menu": "^0.10.0",
     "electron-updater": "^3.1.2",
     "express": "^4.16.3",
+    "express-fileupload": "^1.0.0-alpha.1",
     "material-ui": "^0.20.2",
     "material-ui-slider": "^0.1.0",
     "node-hid": "^0.7.3",
