adding OSD layout stuff

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "node-hid": "^0.7.3",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-grid-layout": "^0.16.6",
     "react-markdown": "^3.6.0",
     "react-scripts": "1.1.5",
     "serialport": "^7.0.2",
