--- a/public/server/config/ui_config_bef.json
+++ b/public/server/config/ui_config_bef.json
@@ -468,5 +468,100 @@
     "dterm_lowpass": "dterm_lowpass_hz"
   },
   "motor_order": [4, 2, 1, 3],
-  "rx_scale": 3000
+  "rx_scale": 3000,
+  "aux_scale": {
+    "min": 900,
+    "max": 2100,
+    "step": 100
+  },
+  "aux_channel_modes": [
+    {
+      "value": -1,
+      "label": "OFF"
+    },
+    {
+      "value": 0,
+      "label": "ARM"
+    },
+    {
+      "value": 1,
+      "label": "ANGLE"
+    },
+    {
+      "value": 2,
+      "label": "HORIZON"
+    },
+    {
+      "value": 5,
+      "label": "GPSHOME"
+    },
+    {
+      "value": 6,
+      "label": "GPSHOLD"
+    },
+    {
+      "value": 7,
+      "label": "HEADFREE"
+    },
+    {
+      "value": 9,
+      "label": "RANGEFINDER"
+    },
+    {
+      "value": 10,
+      "label": "FAILSAFE"
+    },
+    {
+      "value": 11,
+      "label": "ANTIGRAVITY"
+    },
+    {
+      "value": 15,
+      "label": "BEEPERON"
+    },
+    {
+      "value": 21,
+      "label": "OSD"
+    },
+    {
+      "value": 27,
+      "label": "BLACKBOX"
+    },
+    {
+      "value": 28,
+      "label": "AIRMODE"
+    },
+    {
+      "value": 29,
+      "label": "3D"
+    },
+    {
+      "value": 31,
+      "label": "BLACKBOXERASE"
+    },
+    {
+      "value": 32,
+      "label": "CAMERA1"
+    },
+    {
+      "value": 33,
+      "label": "CAMERA2"
+    },
+    {
+      "value": 34,
+      "label": "CAMERA3"
+    },
+    {
+      "value": 35,
+      "label": "FLIPOVERAFTERCRASH"
+    },
+    {
+      "value": 36,
+      "label": "PREARM"
+    },
+    {
+      "value": 39,
+      "label": "VTXPITMODE"
+    }
+  ]
 }
