--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "node-hid": "^0.7.3",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-easy-chart": "^1.0.0",
     "react-grid-layout": "^0.16.6",
     "react-intl": "^2.7.0",
     "react-markdown": "^3.6.0",
