Updating usb detection to be narrower in scope, adding esc calibration for RF1, fixing motor output for rf1 on the sliders

--- a/public/server/config/ui_config_bef.json
+++ b/public/server/config/ui_config_bef.json
@@ -104,8 +104,7 @@
       "align_board_yaw",
       "min_throttle",
       "max_throttle",
-      "accxy_deadband",
-      "acc_unarmedcal"
+      "accxy_deadband"
     ],
     "RX": [
       "mid_rc",
