cleaning up OSD elements and adding labels

--- a/public/server/config/ui_config_bef.json
+++ b/public/server/config/ui_config_bef.json
@@ -146,8 +146,6 @@
       "osd_alt_alarm",
       "osd_ah_max_pit",
       "osd_ah_max_rol",
-      "osd_tim1",
-      "osd_tim2",
       "osd_vbat_pos",
       "osd_rssi_pos",
       "osd_tim_1_pos",
@@ -157,7 +155,7 @@
       "osd_throttle_pos",
       "osd_vtx_channel_pos",
       "osd_crosshairs",
-      "osd_ah_sbar",
+      "osd_ah_sbar_pos",
       "osd_ah_pos",
       "osd_current_pos",
       "osd_mah_drawn_pos",
